--- a/lab4.1/index.html
+++ b/lab4.1/index.html
@@ -7,26 +7,26 @@
 </head>
     <body>
         <header class="header" id="header">
-            <nav class="container clearfix">
+            <nav class="container ">
                 <div class="navigation">
                     <ul class="menu">
                         <li><a href="#"><span>Hello</span></a></li>
                         <li><a href="#"><span>Shop</span></a></li>
                         <li><a href="#"><span>Support</span></a></li>
-                        <li><a href="#"><span>Price-list</span></a></li>
+                        <li><a href="#"><spолвыажпрл о ывджan>Price-list</span></a></li>
                         <li><a href="#"><span>Shops</span></a></li>
                         <li><a href="#"><span>About Us</span></a></li>
+                        <li class="profile"><a href="#"><span>Login</span></a></li>
                     </ul>
                 </div>
-                <div class="profile">
-                    <a href="#">Вход</a>
-                </div>
+                
             </nav>
-            <div class="clearfix"></div>
+            
         </header>
          <!--  -->
         <main class="main">
-            <div class="container clearfix">
+
+            <div class="container flexWrapper">
                 <aside class="sideBar">
                     <form>
                         <section class="sideBarSection">
